--- a/index.html
+++ b/index.html
@@ -38,24 +38,6 @@
   </select>
   </p>
   
-  <p>My preferred OS is: <select name="os"></select>
-  </p>
-
-  <p>My preferred server hardware is: <select name="server">
-    <option value="nuc">Mini PC (NUC, etc.)</option>
-    <option value="pi">Raspberry Pi</option>
-    <option value="server">Server</option>
-    </select>
-  </p>
-
-  <p>My preferred NTP daemon is: <select name="daemon">
-    <option value="chrony">Chrony</option>
-    <option value="ntpd">NTPD</option>
-    <option value="ntpsec">NTPsec</option>
-    <option value="openntpd">OpenNTPD</option>
-    </select>
-  </p>
-
   <hr>
   The following build recipes match your criteria:
 
@@ -99,6 +81,18 @@ function ajax({ method = 'GET', url, data = null, headers = {} }) {
     });
 }
 
+function getRecipeUrl(recipe) {
+  return `https://github.com/BYO-NTP/recipes/wiki/` +
+  `${
+    recipe.os.name.replace('-', '%E2%80%90').replace(/\s+/g, '-')}-${
+    recipe.os.version.replace('-', '%E2%80%90').replace(/\s+/g, '-')}-${
+    recipe.server.manufacturer.replace('-', '%E2%80%90').replace(/\s+/g, '-')}-${
+    recipe.server.product.replace('-', '%E2%80%90').replace(/\s+/g, '-')}-${
+    recipe.gnss.manufacturer.replace('-', '%E2%80%90').replace(/\s+/g, '-')}-${
+    recipe.gnss.product.replace('-', '%E2%80%90').replace(/\s+/g, '-')
+  }`
+}
+
 function populateRecipes(recipes) {
   const ul = document.querySelector('ul[name="recipes"]');
   ul.innerHTML = ''; // Clear existing items
@@ -107,36 +101,20 @@ function populateRecipes(recipes) {
     // console.log('Recipe:', recipe);
     const li = document.createElement('li');
     const a = document.createElement('a');
-    a.href='#'
-    a.textContent = `${recipe.os.name} + ${recipe.server.name} + ${recipe.gnss.name}`;
+    a.href=`${getRecipeUrl(recipe)}`;
+    a.textContent = `${recipe.os.name} + ${recipe.server.manufacturer} ${recipe.server.product} + ${recipe.gnss.manufacturer} ${recipe.gnss.product}`;
     li.appendChild(a);
     ul.appendChild(li);
-  }
-}
-
-function populateOSOptions(osList) {
-  const select = document.querySelector('select[name="os"]');
-  select.innerHTML = ''; // Clear existing options
-
-  for (const os of osList) {
-    // console.log('OS:', os);
-    const option = document.createElement('option');
-    option.value = `${os.name}`;
-    option.textContent = `${os.name}`;
-    select.appendChild(option);
   }
 }
 
 function onLoad () {
   ajax({
     method: 'GET',
-    url: `/dist/all.json`,
+    url: `/recipes/dist/all.json`,
   }).then(response => {
     // console.log('Success:', response);
     populateRecipes(response.recipes);
-    populateOSOptions(response.os);
-
-
 
   }).catch(error => {
     console.error('Error:', error);
