add Phils uputronics build

--- a/index.html
+++ b/index.html
@@ -25,16 +25,14 @@
 <body>
   <h1>Build Your Own - NTP server</h1>
 
-  <p>Build a GNSS backed NTP Stratum 1 server.</p>
-
-  <p>GNSS networks: GPS, Galileo, BeiDou, GLONASS</p>
+  <p>Build a [GNSS](https://en.wikipedia.org/wiki/Satellite_navigation) backed NTP Stratum 1 server.</p>
   
   <p>I would like my NTP server to be accurate to within: <select name="accuracy">
     <option value="1s">1 second</option>
     <option value="1ms">1 millisecond (.001 seconds)</option>
     <option value="1us">1 microsecond (.000001 seconds)</option>
-    <option value="1ns">1 nanosecond (.000000001 seconds)</option>
-    <option value="1ps">1 picosecond (.000000000001 seconds)</option>
+    <option value="1ns">1 nanosecond  (.000000001 seconds)</option>
+    <option value="1ps">1 picosecond  (.000000000001 seconds)</option>
   </select>
   </p>
   
