--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 5px;
-      background-color: #7b6e6e;
+      background-image: url('http://mattbook-m3.home.simerson.net:8080/img/byo-ntp-logo-bg.jpeg');
+      background-size: 1200px 1200px;
+      /* background-color: #7b6e6e; */
     }
     h1 {
       color: #333;
