--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -23,14 +23,16 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      color: lightgrey;
+      /*font-weight: bold;*/
       margin: 0;
       padding: 5px;
       background-image: url('/recipes/img/byo-ntp-logo-bg.jpeg');
-      background-size: 1200px 1200px;
+      background-size: 1200px;
       /* background-color: #7b6e6e; */
     }
     h1 {
-      color: #333;
+      color: white;
       text-align: center;
     }
     table {
@@ -44,10 +46,13 @@
       border-bottom: 1px solid #ddd;
     }
     #recipes tbody tr:hover {
-      background-color: #f0f0f0;
+      background-color: grey;
     }
     .alignright {
       text-align: right;
+    }
+    a {
+      color: yellow;
     }
     footer {
       margin-top: 20px;
