updates to local server.js works

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -271,7 +271,7 @@ function populateServerFilterOptions(recipes) {
 function onLoad () {
   ajax({
     method: 'GET',
-    url: `/all.json`,
+    url: `/recipes/all.json`,
   }).then(response => {
     populateOSFilterOptions(response.recipes);
     populateServerFilterOptions(response.recipes);
