--- a/htdocs/byontp-recipes.html
+++ b/htdocs/byontp-recipes.html
@@ -89,10 +89,10 @@
     <div class="column-header">Build Recipe</div>
 
     <div class="os">
-      <div data-os="FreeBSD"><img src="/img/os/freebsd.png" width="26px"><br>FreeBSD</div>
-      <div data-os="Linux"><img src="/img/os/linux.png" width="26px"><br>Linux</div>
-      <div data-os="macOS"><img src="/img/os/macos.jpg" width="26px"><br>macOS</div>
-      <div data-os="Windows"><img src="/img/os/windows.png" width="26px"><br>Windows</div>
+      <div data-os="FreeBSD"><img src="/img/logo/freebsd.png" width="26px"><br>FreeBSD</div>
+      <div data-os="Linux"><img src="/img/logo/linux.png" width="26px"><br>Linux</div>
+      <div data-os="macOS"><img src="/img/logo/macos.jpg" width="26px"><br>macOS</div>
+      <div data-os="Windows"><img src="/img/logo/windows.png" width="26px"><br>Windows</div>
     </div>
 
     <div class="connection">
