--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -5,16 +5,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BYO NTP Recipe Index</title>
-  <!-- <link rel="stylesheet" href="style.css"> -->
-  <meta name="description" content="">
+  <link rel="stylesheet" href="//style.css">
+  <meta name="description" content="A filterable list of build recipes / guides / how-tos for building your own NTP server.">
 
   <meta property="og:title" content="Build Your Own NTP">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
-
-  <!-- <link rel="manifest" href="site.webmanifest"> -->
+  <meta property="og:description" content="A filterable list of build recipes / guides / how-tos for building your own NTP server.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://byo-ntp.github.io/">
+  <meta property="og:image" content="https://byo-ntp.github.io/img/logo/BYO-NTP-logo.jpeg">
+  
   <meta name="theme-color" content="#fafafa">
   <style>
     body {
@@ -60,7 +59,6 @@
       padding: 5px;
       text-align: center;
       font-size: 0.7em;
-      /* border-top: 1px solid #ddd; */
     }
 </style>
 </head>
@@ -117,7 +115,7 @@
   </ol>
 
   <footer>
-    <p>BYO-NTP is a community project. Please contribute on <a href="https://github.com/BYO-NTP/BYO-NTP.github.io">GitHub</a>.</p>
+    <p>BYO-NTP is a community project. Please contribute on <a href="https://github.com/BYO-NTP/recipes/wiki">GitHub</a>.</p>
   </footer>
 
   <script>
